feat:paginas estruturais do projeto

--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,3 +1,16 @@
-<footer>Footer</footer>
+<footer>
+    
+    <ul class="flex-container flex-container--row">
+
+        <li>
+          <a href="mailto:devguilima@gmail.com">devguilima@gmail.com</a>
+        </li>
+  
+        <li>
+          <a href="#" target="_blank" rel="noopener noreferrer" title="Fale conosco">62 93465211</a>
+        </li>
+  
+      </ul>
+</footer>
 </body>
 </html>
