--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,1 +1,52 @@
-<header>Header</header>
+<header>
+   <!-- <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link active" href="../index.ejs">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../explorer.ejs">Explorar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../more.ejs">Mais</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../posts.ejs">Mensagens</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../profile.ejs">Perfil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../alerts.ejs">Alertas</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../savedItems.ejs">Itens Salvos</a>
+        </li>
+      </ul>
+-->
+<ul class="nav nav-pills">
+   
+
+    <li class="nav-item">
+        <a class="nav-link active" href="../index.ejs">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../explorer.ejs">Explorar</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../more.ejs">Mais</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="../posts.ejs">Mensagens</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../profile.ejs">Perfil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../alerts.ejs">Alertas</a>
+        </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../savedItems.ejs">Itens Salvos</a>
+      </li>
+  </ul>
+
+</header>
