--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -27,25 +27,25 @@
    
 
     <li class="nav-item">
-        <a class="nav-link active" href="../index.ejs">HOME</a>
+        <a class="nav-link active" href="/">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../explorer.ejs">Explorar</a>
+        <a class="nav-link" href="/explorer">Explorar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../more.ejs">Mais</a>
+        <a class="nav-link" href="/more">Mais</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="../posts.ejs">Mensagens</a>
+          <a class="nav-link" href="/posts">Mensagens</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../profile.ejs">Perfil</a>
+          <a class="nav-link" href="/profile">Perfil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../alerts.ejs">Alertas</a>
+          <a class="nav-link" href="/alerts">Alertas</a>
         </li>
       <li class="nav-item">
-        <a class="nav-link" href="../savedItems.ejs">Itens Salvos</a>
+        <a class="nav-link" href="/savedItems">Itens Salvos</a>
       </li>
   </ul>
 
