--- a/server/views/partials/banner.ejs
+++ b/server/views/partials/banner.ejs
@@ -8,13 +8,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="../../public/images/img2.jpg" alt="Primeiro Slide">
+        <img class="d-block w-100" src="/images/img2.jpg" alt="Primeiro Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../public/images/img1.jpg" alt="Segundo Slide">
+        <img class="d-block w-100" src="/images/img1.jpg" alt="Segundo Slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../../public/images/img1.jpg" alt="Terceiro Slide">
+        <img class="d-block w-100" src="/images/img1.jpg" alt="Terceiro Slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
