feat:Adiciionando pag login

--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-   <!-- <ul class="nav flex-column">
+  <!-- <ul class="nav flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="../index.ejs">HOME</a>
         </li>
@@ -23,30 +23,33 @@
         </li>
       </ul>
 -->
-<ul class="nav nav-pills">
-   
+  <ul class="nav nav-pills">
+
 
     <li class="nav-item">
-        <a class="nav-link active" href="/">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/explorer">Explorar</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/more">Mais</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" href="/posts">Mensagens</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">Perfil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/alerts">Alertas</a>
-        </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/savedItems">Itens Salvos</a>
-      </li>
+      <a class="nav-link active" href="/">HOME</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/explorer">Explorar</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/more">Mais</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/posts">Mensagens</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/profile">Perfil</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/alerts">Alertas</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/savedItems">Itens Salvos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/login">Login</a>
+    </li>
   </ul>
 
 </header>
